@@ -3,6 +3,12 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- why are { undone individually?
+- is this bogus?
+				else if(fvm[endi] == startLine + numLines)
+				{
+					fvmput(starti,endi + 1,null);
+				}
 - broken activity log autoscroll
 - undo caret pos wrong
 - bizarre dockable window manager button layout problem
@@ -192,7 +198,6 @@ and quirks that I need to fix eventually.
 
 - closing lots of files is slow -- esp. with close all dialog box!
 - don't tokenize lines twice
-- line delete: gap optimization
 - jEdit.getBuffer(): use a hashtable, not a linear scan. have the
   buffer notify jEdit of path changes though.
 - menu drag: slow
